finished auth, wrote tests
